commentSection scrollbar fix

--- a/Tour-De-Viet/src/tourPageDetailComponent/commentSection.css
+++ b/Tour-De-Viet/src/tourPageDetailComponent/commentSection.css
@@ -1,18 +1,17 @@
-.TypingArea {
-    padding: 5px 10px;
-    color: #345246 ;
-    border: none; 
-    outline: none; 
-    overflow: hidden;
-  }
 
-.custom-scrollbar {
-    overflow: auto;
-  }
-  
-  .custom-scrollbar::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-    display: none;
-  }
-  
+.TypingArea {
+  padding: 5px 10px;
+  color: #345246;
+  border: none; 
+  outline: none; 
+  overflow: hidden;
+}
+
+.scrollbar-hidden {
+  overflow-y: auto;
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none; /* WebKit */
+}
